--- a/Style/style.css
+++ b/Style/style.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
     font-family: 'Cascadia Code', monospace;
+}
+
+p {
     color: white;
 }
 
@@ -28,7 +31,8 @@ main {
 
 main h1 {
     text-align: center;
-    margin-top: 10px;
+    margin: 8px 0;
+    color: white;
 }
 
 div {
@@ -40,6 +44,10 @@ div {
     background-color: #1f1d2b55;
     border-radius: 15px;
     width: 98%;
+}
+
+section {
+    box-shadow: 0px 0px 5px black;
 }
 
 .calculatorBar {
@@ -64,17 +72,28 @@ button {
     margin: 5px;
     border-radius: 10px;
     font-size: 40px;
-    
+    border: none;
+    box-shadow: 0px 0px 5px black;
+}
+
+button:hover {
+    cursor: pointer;
+    box-shadow: 0px 0px 15px black;
+}
+
+button:active {
+    outline: none;
+    box-shadow: inset 0 0 10px black;
 }
 
 .numberButton {
-
+    background-color: rgb(138, 43, 226, 40%);
 }
 
 .methodButton{
-
+    background-color: rgba(39, 93, 201, 80%);
 }
 
 .controlButton {
-
+    background-color: rgba(245, 106, 0, 0.8);
 }
