--- a/Style/style.css
+++ b/Style/style.css
@@ -1,64 +1,68 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Cascadia Code', monospace;
+  margin: 0;
+  padding: 0;
+  font-family: "Cascadia Code", monospace;
 }
 
 p {
-    color: white;
+  color: white;
 }
 
-body  {
-    min-height: 100vh;
-    background: #020024;
-    background: linear-gradient(rgba(2, 0, 36, 1), rgba(9, 9, 121, 1), rgba(144, 75, 235, 1));
+body {
+  min-height: 100vh;
+  background: #020024;
+  background: linear-gradient(
+    rgba(2, 0, 36, 1),
+    rgba(9, 9, 121, 1),
+    rgba(144, 75, 235, 1)
+  );
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 main {
-    display: block;
-    background-color: #3e3866;
-    width: 550px;
-    /* height: 700px; */
-    height: fit-content;
+  display: block;
+  background-color: #3e3866;
+  width: 550px;
+  /* height: 700px; */
+  height: fit-content;
 
-    border-radius: 15px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.29);
+  border-radius: 15px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.29);
 }
 
 main h1 {
-    text-align: center;
-    margin: 8px 0;
-    color: white;
+  text-align: center;
+  margin: 8px 0;
+  color: white;
 }
 
-div {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    margin-top: 0;
-    margin-bottom: 10px;
-    margin-left: 5px; 
-    background-color: #1f1d2b55;
-    border-radius: 15px;
-    width: 98%;
+form {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  margin-top: 0;
+  margin-bottom: 10px;
+  margin-left: 5px;
+  background-color: #1f1d2b55;
+  border-radius: 15px;
+  width: 98%;
 }
 
 section {
-    box-shadow: 0px 0px 5px black;
+  box-shadow: 0px 0px 5px black;
 }
 
 .calculatorBar {
-    height: 130px;
-    grid-column: span 4;
-    background-color: #181818;
-    border-radius: 25px;
-    margin: 25px 10px 30px 10px;
-    text-align: center;
-    font-size: 35px;
-    line-height: 130px;
+  height: 130px;
+  grid-column: span 4;
+  background-color: #181818;
+  border-radius: 25px;
+  margin: 25px 10px 30px 10px;
+  text-align: center;
+  font-size: 35px;
+  line-height: 130px;
 }
 
 .calculatorBar p {
@@ -68,32 +72,32 @@ section {
 }
 
 button {
-    min-height: 100px;
-    margin: 5px;
-    border-radius: 10px;
-    font-size: 40px;
-    border: none;
-    box-shadow: 0px 0px 5px black;
+  min-height: 100px;
+  margin: 5px;
+  border-radius: 10px;
+  font-size: 40px;
+  border: none;
+  box-shadow: 0px 0px 5px black;
 }
 
 button:hover {
-    cursor: pointer;
-    box-shadow: 0px 0px 15px black;
+  cursor: pointer;
+  box-shadow: 0px 0px 15px black;
 }
 
 button:active {
-    outline: none;
-    box-shadow: inset 0 0 10px black;
+  outline: none;
+  box-shadow: inset 0 0 10px black;
 }
 
 .numberButton {
-    background-color: rgb(138, 43, 226, 40%);
+  background-color: rgb(138, 43, 226, 40%);
 }
 
-.methodButton{
-    background-color: rgba(39, 93, 201, 80%);
+.methodButton {
+  background-color: rgba(39, 93, 201, 80%);
 }
 
 .controlButton {
-    background-color: rgba(245, 106, 0, 0.8);
+  background-color: rgba(245, 106, 0, 0.8);
 }
